--- a/public/templates/footer.ejs
+++ b/public/templates/footer.ejs
@@ -1,3 +1,41 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Главная - Поднебес</title>
+  <link rel="stylesheet" href="../styles/header.css">
+  <link rel="stylesheet" href="../styles/footer.css">
+  <link rel="stylesheet" href="../styles/home.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
 <footer>
-  <p>&copy; 2025 Поднебес. Все права защищены.</p>
+  <div class="footer-images">
+    <img class="logo" src="img/logo-footer.png" alt="logo-footer">
+    <img class="numbers" src="img/1-2-3.png" alt="1-2-3">
+  </div>
+  <div class="footer-text-left">
+    <p>Главная</p>
+    <a>Визы в Китай</a>
+    <a>Миграционные услуги</a>
+    <a>Логистика</a>
+  </div>
+  <div class="footer-text-right">
+    <p>Контакты</p>
+    <a href="tel:79992065007">+7 (999) 206-50-07</a>
+    <a href="mailto:podnebesvisacenter@mail.ru">podnebesvisacenter@mail.ru</a>
+    <a>Литейный проспект, 39<br>4 этаж/офис 434</a>
+    <div class="messengers">
+        <a href="https://t.me/+79992065007" target="_blank">
+          <img src="img/telegram.png" alt="telegram"></a>
+        <a href="https://wa.me/79992065007" target="_blank">
+          <img src="img/whatsapp.png" alt="whatsapp">
+        </a>
+        <a href="https://msngr.link/wc/wxid_ow41qgzlc1rf22" target="_blank">
+          <img src="img/wechat.png" alt="whatsapp">
+        </a>
+    </div>
+  </div>
 </footer>
