--- a/public/templates/home.ejs
+++ b/public/templates/home.ejs
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оформление визы в Китай</title>
-    <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/home.css">
     <link rel="stylesheet" href="../styles/viza.css">
+    <link rel="stylesheet" href="../styles/migration.css">
+    <link rel="stylesheet" href="../styles/logistics.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+
 
 </head>
 <body>
@@ -25,9 +28,12 @@
 
             <!-- Блок с иконками -->
             <div class="icon-block">
-                <img src="../img/icon_tg.png" alt="Иконка 1">
-                <img src="../img/icon_whatssapp.png" alt="Иконка 2">
-                <img src="../img/icon_wechat.png" alt="Иконка 3">
+                <a href="https://t.me/+79992065007" target="_blank">
+                    <img src="../img/icon_tg.png" alt="Иконка 1"></a>
+                <a href="https://wa.me/79992065007" target="_blank">
+                    <img src="../img/icon_whatssapp.png" alt="Иконка 2"></a>
+                <a href="https://msngr.link/wc/wxid_ow41qgzlc1rf22" target="_blank">
+                    <img src="../img/icon_wechat.png" alt="Иконка 3"></a>
             </div>
 
             <!-- Блок с номерами телефонов -->
@@ -39,7 +45,7 @@
         <div class="visa-banner">
             <img src="../img/airplane.png" alt="Фон" class="visa-banner-img">
             <div class="visa-banner-content">
-                <h2 class="visa-title">Оформление визы <span>в Китай</span></h2>
+                <h2 class="visa-oformlenie">Оформление визы <span>в Китай</span></h2>
                 <p class="visa-subtitle">Срочное оформление визы<br>в Китай любого типа!</p>
                 <button class="visa-urgentle-button">Срочное оформление</button>
             </div>
@@ -112,10 +118,14 @@
     </div>
 
 </main>
-    <!-- Подключение футера -->
+    <!-- Подключение виза -->
     <%- include('viza') %>
-    <!-- Подключение футера -->
+    <!-- Подключение миграции -->
     <%- include('migration') %>
+    <!-- Подключение логистики -->
+    <%- include('logistics') %>
+    <!-- Подключение футера -->
+    <%- include('footer') %>
 </div>
 </body>
 </html>
