--- a/public/templates/logistics.ejs
+++ b/public/templates/logistics.ejs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная - Поднебес</title>
-    <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/home.css">
     <link rel="stylesheet" href="../styles/logistics.css">
@@ -79,15 +78,15 @@
                             <option value="d">Морем 45-55 дней</option>
                         </select></p>
                 </div>
-                </div>
+            </div>
             <p class="form_title_name" style="margin-top: 40px;">Цена доставки: 0$</p>
             <div class="enter-name-input" style="margin-top: 10px;">
                 <input type="text" name="enter name" class="cargo-form-input" placeholder="Введите имя">
                 <input type="text" name="enter phone" class="cargo-form-input" placeholder="Введите номер телефона">
             </div>
-            <button type="submit" class="cargo-submit-button">Отправить заявку</button>
-                <p class="under-button-text1">*Расчет стоимости носит ориентировочный характер. Для получения точного расчета заполните заявку и с вами свяжется наш менеджер</p>
-                <p class="under-button-text2">*Не является публичной офертой</p>
+            <button class="cargo-footer-button">Отправить заявку</button>
+            <p class="under-button-text1">*Расчет стоимости носит ориентировочный характер. Для получения точного расчета заполните заявку и с вами свяжется наш менеджер</p>
+            <p class="under-button-text2">*Не является публичной офертой</p>
         </form>
     </div>
 </div>
