--- a/public/templates/migration.ejs
+++ b/public/templates/migration.ejs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная - Поднебес</title>
-    <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/home.css">
     <link rel="stylesheet" href="../styles/migration.css">
@@ -15,7 +14,7 @@
 <body>
 <div class="General center">
     <div class="order-visa-text">
-    <h1 align="center">Заказать визу<span style="color: rgb(255, 88, 29);"> онлайн</span></h1>
+        <h1 align="center">Заказать визу<span style="color: rgb(255, 88, 29);"> онлайн</span></h1>
         <p class="order-visa-text1" align="center" style="margin-top: 26px">Закажите визу прямо сейчас, не выходя из дома!</p>
         <p class="order-visa-text2" align="center">Достаточно загрузить пару документов</p>
     </div>
@@ -30,7 +29,7 @@
                 <li>Загранпаспорт <br>(скан лицевой страницы)</li>
                 <li>Справка с работы</li>
                 <li>Заполненный опросный лист <br>(заполнить по кнопке ниже)</li>
-                <button>Заполнить опросный лист</button>
+                <button type="submit">Заполнить опросный лист</button>
             </ul>
         </div>
         <div class="document-list2">
@@ -40,7 +39,7 @@
                 <li>Скан внутреннего паспорта <br>всех страниц, где стоят отметки</li>
                 <li>Загранпаспорт (скан лицевой страницы)</li>
                 <li>Заполненный опросный лист <br>(заполнить по кнопке ниже)</li>
-                <button>Заполнить опросный лист</button>
+                <button type="submit">Заполнить опросный лист</button>
             </ul>
         </div>
     </div>
