--- a/public/styles/logistics.css
+++ b/public/styles/logistics.css
@@ -2,11 +2,9 @@
     margin: 0;
     padding: 0;
 }
-
 body {
     font-family: "Montserrat", sans-serif;
 }
-
 h1{
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
@@ -14,14 +12,12 @@ h1{
     padding-top: 2vh;
     font-size: 2.25rem;
 }
-
 .center {
     color: white;
     background-color: black;
     padding-left: calc(50% - 600px);
     padding-right: calc(50% - 600px);
 }
-
 .road {
     display: flex;
     justify-content: center;
@@ -34,7 +30,6 @@ h1{
     background-position: bottom;
     background-size: contain;
 }
-
 .line_1 {
     background-image: url(../img/line1.png);
     background-repeat: no-repeat;
@@ -44,7 +39,6 @@ h1{
     width: 120px;
     margin-top: 67px;
 }
-
 .line_2 {
     background-image: url(../img/line2.png);
     background-repeat: no-repeat;
@@ -54,7 +48,6 @@ h1{
     width: 50px;
     margin-top: 108px;
 }
-
 .line_3 {
     background-image: url(../img/line3.png);
     background-repeat: no-repeat;
@@ -64,7 +57,6 @@ h1{
     width: 23px;
     margin-top: 217px;
 }
-
 .line_4 {
     background-image: url(../img/line4.png);
     background-repeat: no-repeat;
@@ -74,7 +66,6 @@ h1{
     width: 23px;
     margin-top: 117px;
 }
-
 .line_5 {
     background-image: url(../img/line5.png);
     background-repeat: no-repeat;
@@ -84,7 +75,6 @@ h1{
     width: 23px;
     margin-top: 204px;
 }
-
 .shape_1 {
     position: relative; /* Абсолютное позиционирование */
     top: -25px; /* Сдвиг вверх относительно линии */
@@ -103,7 +93,6 @@ h1{
     text-align: center; /* Выравнивание текста по центру */
     background-color: rgb(45, 45, 45);
 }
-
 .shape_2 {
     position: relative; /* Абсолютное позиционирование */
     top: -25px; /* Сдвиг вверх относительно линии */
@@ -122,7 +111,6 @@ h1{
     text-align: center; /* Выравнивание текста по центру */
     background-color: rgb(45, 45, 45);
 }
-
 .shape_3 {
     position: relative; /* Абсолютное позиционирование */
     top: -10px; /* Сдвиг вверх относительно линии */
@@ -141,7 +129,6 @@ h1{
     text-align: center; /* Выравнивание текста по центру */
     background-color: rgb(45, 45, 45);
 }
-
 .shape_4 {
     position: relative; /* Абсолютное позиционирование */
     top: -18px; /* Сдвиг вверх относительно линии */
@@ -160,7 +147,6 @@ h1{
     text-align: center; /* Выравнивание текста по центру */
     background-color: rgb(45, 45, 45);
 }
-
 .shape_5 {
     position: relative; /* Абсолютное позиционирование */
     top: -20px; /* Сдвиг вверх относительно линии */
@@ -179,7 +165,6 @@ h1{
     text-align: center; /* Выравнивание текста по центру */
     background-color: rgb(45, 45, 45);
 }
-
 .lines {
     position: relative;
     gap: 200px;
@@ -190,7 +175,6 @@ h1{
     justify-content: center;
     align-items: flex-start;
 }
-
 .icons-container {
     display: flex;
     flex-wrap: wrap;
@@ -199,7 +183,6 @@ h1{
     margin-top: 20px; /* Отступ сверху */
     padding-left: 20px; /* Отступ слева */
 }
-
 /* Стили для каждого элемента (train, ship, plane) */
 .icon-item {
     position: relative; /* Для позиционирования текста */
@@ -207,7 +190,6 @@ h1{
     flex-direction: column;
     align-items: center;
 }
-
 .icon-text {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
@@ -221,19 +203,16 @@ h1{
     border-radius: 5px; /* Скругление углов */
     margin-top: 8px; /* Добавляем отступ сверху, чтобы текст не прилипал к изображению */
 }
-
 .icon-item img{
     width: 90%;
     height: auto;
 }
-
 h2 {
     position: relative;
     font-size: 2rem;
     padding: 20px;
     font-weight: 700;
 }
-
 .cargo-form {
     padding: 20px;             /* Внутренний отступ */
     border-radius: 5px;        /* Скругленные углы */
@@ -242,7 +221,6 @@ h2 {
     max-width: 500px;
     /* Максимальная ширина для адаптивности */
 }
-
 .cargo-form-input{
     color: rgb(255, 255, 255);
     background-color: rgb(45, 45, 45);
@@ -251,7 +229,6 @@ h2 {
     height: 54px;
     outline: none;
 }
-
 .cargo-form input[type="text"] {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
@@ -262,11 +239,9 @@ h2 {
     color: white;
     padding-left: 20px;
 }
-
 .cargo-form input[type="text"]::placeholder {
     color: #999; /* Серый текст для placeholder */
 }
-
 .form_title_name,
 .form_title_weight,
 .form_title_volume{
@@ -276,20 +251,17 @@ h2 {
     padding-bottom: 5px;
     font-size: 22px;
 }
-
 .cargo-weight-volume {
     display: flex;
     flex-direction: row;
     gap: 70px;
     margin-top: 20px;
 }
-
 .unit_group {
     display: flex;
     align-items: flex-end;
     gap: 10px;
 }
-
 .unit {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
@@ -298,7 +270,6 @@ h2 {
     line-height: 31px;
     font-size: 22px;
 }
-
 .cargo-form-input select {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
@@ -322,7 +293,6 @@ h2 {
     background-size: 13px;
     outline: none;
 }
-
 .enter-name-input {
     width: 100%;
     display: flex;
@@ -330,8 +300,7 @@ h2 {
     justify-content: center;
     gap: 15px;
 }
-
-.cargo-submit-button {
+.cargo-footer-button {
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     color: white;
@@ -345,7 +314,7 @@ h2 {
     cursor: pointer;
     outline: none;
 }
-.cargo-submit-button:hover {
+.cargo-footer-button:hover {
     background-color: rgb(255,128,69);
     outline: none;
 }
@@ -358,4 +327,3 @@ h2 {
     width: 748px;
     height: auto;
 }
-
