add files migration

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -111,7 +111,7 @@ body {
 }
 
 /* Заголовок */
-.visa-title {
+.oformlenie {
     font-size: 2.7rem; /* Увеличен размер заголовка */
     font-weight: bolder;
     color: #ffffff;
@@ -119,7 +119,7 @@ body {
 
 }
 
-.visa-title span {
+.oformlenie span {
     color: #e54e2e;
 }
 
@@ -154,7 +154,7 @@ body {
         width: 95%;
     }
 
-    .visa-title {
+    .oformlenie {
         font-size: 2rem;
     }
 
