--- a/public/templates/home.ejs
+++ b/public/templates/home.ejs
@@ -39,7 +39,7 @@
         <div class="visa-banner">
             <img src="../img/airplane.png" alt="Фон" class="visa-banner-img">
             <div class="visa-banner-content">
-                <h2 class="visa-title">Оформление визы <span>в Китай</span></h2>
+                <h2 class="oformlenie">Оформление визы <span>в Китай</span></h2>
                 <p class="visa-subtitle">Срочное оформление визы<br>в Китай любого типа!</p>
                 <button class="visa-urgentle-button">Срочное оформление</button>
             </div>
@@ -112,10 +112,14 @@
     </div>
 
 </main>
-    <!-- Подключение футера -->
+    <!-- Подключение визы -->
     <%- include('viza') %>
-    <!-- Подключение футера -->
+    <!-- Подключение миграции -->
     <%- include('migration') %>
+    <!-- Подключение логистики -->
+    <%- include('logistics') %>
+    <!-- Подключение футера -->
+    <%- include('footer') %>
 </div>
 </body>
 </html>
