--- a/public/styles/migration.css
+++ b/public/styles/migration.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Montserrat", sans-serif;
     background-color: #000; /* Черный фон */
     color: #fff; /* Белый текст */
 }
@@ -98,10 +98,6 @@ body {
     font-weight: bold;
 }
 
-body {
-    font-family: "Montserrat", sans-serif;
-}
-
 h1{
     position: relative;
     padding-top: 2vh;
@@ -134,11 +130,13 @@ ul {
 }
 
 li {
+    font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 20px;
     margin-bottom: 8px;
     padding-left: 15px;
     position: relative;
+    text-align: left;
 }
 
 li::before {
