--- a/public/styles/viza.css
+++ b/public/styles/viza.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Montserrat", sans-serif;
     background-color: #000; /* Черный фон */
     color: #fff; /* Белый текст */
     text-align: center;
