--- a/public/templates/viza.ejs
+++ b/public/templates/viza.ejs
@@ -133,7 +133,7 @@
             </div>
                 <div class="visa-title">Однократная</div>
                 <div class="visa-price">13.500руб</div>
-                <div class="visa-info">
+                <div class="visa-info" style="height: 35%">
                     <div class="info-row">
                         <img src="../img/orange_mark.png" alt="Иконка">
                         <span>Бизнес</span>
@@ -171,7 +171,7 @@
                 <div class="visa-title">Двукратная</div>
                 <div class="visa-price">17.000руб</div>
             </div>
-            <div class="visa-info">
+            <div class="visa-info" style="height: 35%">
                 <div class="info-row">
                     <img src="../img/orange_mark.png" alt="Иконка">
                     <span>Бизнес</span>
@@ -209,7 +209,7 @@
                 <div class="visa-title">Многократная</div>
                 <div class="visa-price">20.000руб</div>
             </div>
-            <div class="visa-info">
+            <div class="visa-info" style="height: 35%">
                 <div class="info-row">
                     <img src="../img/orange_mark.png" alt="Иконка">
                     <span>Бизнес</span>
@@ -230,8 +230,8 @@
                     <img src="../img/orange_mark.png" alt="Иконка">
                     <span>Пребывание по 30\60\90\180дн<br>в зависимости от типа визы</span>
                 </div>
-                <button class="visa-button3">Оформить визу</button>
-                <p class="discount-text3">
+                <button class="visa-button">Оформить визу</button>
+                <p class="discount-text">
                     *При групповых поездках или заказе<br>нескольких виз предоставляется скидка
                 </p>
             </div>
