change left size

--- a/public/templates/home.ejs
+++ b/public/templates/home.ejs
@@ -16,7 +16,6 @@
 <div class="General-center">
 <!-- Сама страница -->
 <main>
-    <!-- Галерея с 6 фотографиями -->
     <div class="photo-gallery">
         <div class="info-home">
             <!-- Блок с фотографиями -->
@@ -45,7 +44,7 @@
             <img src="../img/airplane.png" alt="Фон" class="visa-banner-img">
             <div class="visa-banner-content">
 
-                <h2 class="oformlenie">Оформление визы <span>в Китай</span></h2>
+                <h2 class="registration-visa">Оформление визы <span>в Китай</span></h2>
 
                 <p class="visa-subtitle">Срочное оформление визы<br>в Китай любого типа!</p>
                 <button class="visa-urgentle-button">Срочное оформление</button>
@@ -110,8 +109,8 @@
         <div class="consultation-section">
             <div class="consultation-container">
                 <div class="consultation-text">
-                    <p class="consultation-title">Получите <span class="highlight">бесплатную консультацию</span></p>
-                    <p class="consultation-subtitle">Наши специалисты помогут вам решить любой вопрос</p>
+                    <div class="consultation-title">Получите <span class="highlight">бесплатную консультацию</span></div>
+                    <div class="consultation-subtitle">Наши специалисты помогут вам решить любой вопрос</div>
                 </div>
                 <button class="btn_cons">Получить консультацию</button>
             </div>
