--- a/public/templates/logistics.ejs
+++ b/public/templates/logistics.ejs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная - Поднебес</title>
-    <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/home.css">
     <link rel="stylesheet" href="../styles/logistics.css">
@@ -36,15 +35,15 @@
     </div>
     <div class="icons-container">
         <div class="icon-item">
-            <img src="img/train.png" alt="train">
+            <img src="../img/train.png" alt="train">
             <div class="icon-text">Ж/Д перевозки</div>
         </div>
         <div class="icon-item">
-            <img src="img/ship.png" alt="ship">
+            <img src="../img/ship.png" alt="ship">
             <div class="icon-text">Морские перевозки</div>
         </div>
         <div class="icon-item">
-            <img src="img/plane.png" alt="plane">
+            <img src="../img/plane.png" alt="plane">
             <div class="icon-text">Авиаперевозки</div>
         </div>
     </div>
