--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -112,16 +112,16 @@ body {
 
 /* Заголовок */
 
-.oformlenie {
+.registration-visa {
     font-size: 2.7rem; /* Увеличен размер заголовка */
     font-weight: bolder;
     color: #ffffff;
-    left: -0.1%;
+    left: -2.5%;
 
 }
 
 
-.oformlenie span {
+.registration-visa span {
     color: #e54e2e;
 }
 
@@ -129,7 +129,7 @@ body {
 .visa-subtitle {
     color: white;
     font-size: 1.5rem;
-    margin-top: 100px;
+    margin-top: 10px;
     font-weight: normal;
     display: block;
     line-height: 1.2;
@@ -275,7 +275,7 @@ body {
     font-size: 1.5rem;
     font-weight: bold;
     color: white;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .promo-subtitle span {
@@ -284,9 +284,9 @@ body {
 
 /* Описание */
 .promo-description {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     color: white;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 /* Кнопка */
@@ -299,7 +299,7 @@ body {
     font-weight: bold;
     cursor: pointer;
     transition: 0.3s ease;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .promo-button:hover {
@@ -336,12 +336,13 @@ body {
 .consultation-title {
     font-size: 1.8rem;
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-left: -65px;
 }
 
 .consultation-subtitle {
     font-size: 1.4rem;
     color: white;
+    margin-top: 5px;
 }
 
 .highlight {
