--- a/public/templates/logistics.ejs
+++ b/public/templates/logistics.ejs
@@ -48,7 +48,7 @@
         </div>
     </div>
     <div class="form">
-        <h2>Узнайте условия доставки<br>и рассчитайте её <span style="color: rgb(255, 88, 29)">стоимость</span></h2>
+        <h2>Узнайте условия доставки<br>и рассчитайте её <span style="color: rgb(255, 88, 29);">стоимость</span></h2>
         <form method="get" class="cargo-form">
             <p class="form_title_name">Наименование груза</p>
             <input type="text" name="Cargo name" class="cargo-form-input" placeholder="Например: автозапчасти">
