--- a/public/styles/migration.css
+++ b/public/styles/migration.css
@@ -15,7 +15,6 @@ body {
 .background-wrapper {
     position: relative;
     width: 100%;
-    height: 100vh; /* Высота на весь экран */
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -68,12 +67,14 @@ body {
     font-size: 1.8rem;
     font-weight: bold;
     color: #e54e2e;
-    margin-bottom: 20px;
+    text-align: center;
+    margin-top: -35px;
+    margin-bottom: -15px;
 }
 
 .overlay p {
     font-size: 0.95rem;
-    margin-bottom: 35px;
+    margin-bottom: 15px;
     font-weight: bold;
 }
 
