--- a/public/templates/viza.ejs
+++ b/public/templates/viza.ejs
@@ -238,7 +238,7 @@
         </div>
     </div>
     <div class="visa-process">
-        <h2 class="visa-process-title">Процесс <span>получения</span> визы</h2>
+        <div class="visa-process-title">Процесс <span>получения</span> визы</div>
 
         <div class="visa-process-images">
             <img class="step-circle" src="../img/orangeСircle.png" alt="Фото 1">
