--- a/public/styles/logistics.css
+++ b/public/styles/logistics.css
@@ -20,6 +20,7 @@ h1{
     background-color: black;
     padding-left: calc(50% - 600px);
     padding-right: calc(50% - 600px);
+    margin-top: 2%;
 }
 
 .road {
@@ -27,8 +28,8 @@ h1{
     justify-content: center;
     align-items: center;
     width: 100%; /* Ширина контейнера */
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 10px;
+    margin-bottom: 30px;
     background-image: url(../img/road.png) !important;
     background-repeat: no-repeat;
     background-position: bottom;
