--- a/public/styles/migration.css
+++ b/public/styles/migration.css
@@ -32,14 +32,13 @@ body {
     position: absolute;
     display: flex;
     justify-content: center;
-    gap: 50px; /* Отступы между карточками */
+    gap: 18px; /* Отступы между карточками */
     width: 100%;
-    max-width: 100px;
 }
 
 .image-box {
     position: relative;
-    width: 300px; /* Фиксированная ширина */
+    width: 350px; /* Фиксированная ширина */
     height: 250px; /* Фиксированная высота */
     text-align: center;
     flex-shrink: 0;
@@ -66,26 +65,27 @@ body {
 .overlay h2 {
     font-size: 1.8rem;
     font-weight: bold;
-    color: #e54e2e;
+    color: #ee6535;
     text-align: center;
-    margin-top: -35px;
+    margin-top: -65px;
     margin-bottom: -15px;
 }
 
 .overlay p {
-    font-size: 0.95rem;
+    font-size: 16px;
     margin-bottom: 15px;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .mig-button {
-    background: #e54e2e;
+    background: #ff581d;
     color: white;
     border: none;
     padding: 12px 24px;
     border-radius: 5px;
     cursor: pointer;
     font-weight: bold;
+    transition: 0.3s ease;
 }
 
 .mig-button:hover {
@@ -149,7 +149,7 @@ li::before {
 }
 
 .document-button {
-    width: 70%; /* Растягиваем по ширине блока */
+    width: 60%; /* Растягиваем по ширине блока */
     padding: 12px;
     margin-top: 15px;
     border: 2px solid white; /* Белая обводка */
@@ -157,8 +157,11 @@ li::before {
     color: white;
     font-size: 18px;
     cursor: pointer;
+    font-weight: 400;
     border-radius: 5px;
     transition: all 0.3s ease-in-out;
+    display: flex;
+    justify-content: center;
 }
 
 /* Эффект при наведении */
@@ -208,17 +211,19 @@ li::before {
     margin-top: 30px; /* Отступ сверху */
     width: 300px; /* Задаем ширину кнопки */
     padding: 12px;
-    border: 2px solid white;
-    background: transparent;
+
+    background: #ff581d;
     color: white;
-    font-size: 18px;
+    font-size: 22px;
     cursor: pointer;
     border-radius: 5px;
+    font-weight: bold;
     display: block; /* Чтобы кнопка не растягивалась */
     text-align: center;
     position: relative; /* Позволяет центрировать */
     left: 37%;
     transition: all 0.3s ease-in-out;
+    border: none;
 }
 
 .load-documents:hover {
