--- a/public/templates/migration.ejs
+++ b/public/templates/migration.ejs
@@ -13,7 +13,7 @@
             <div class="image-box">
                 <img src="../img/migform.png" alt="Image 1">
                 <div class="overlay">
-                    <h2>Шенген</h2>
+                    <h2 style="margin-top: -82px">Шенген</h2>
                     <p>Оказываем услуги по визовому<br>оформлению в страны Евросоюза.<br>Быстрое оформление виз во все<br>страны Шенгенской зоны</p>
                     <button class="mig-button">Заказать услугу</button>
                 </div>
@@ -29,7 +29,7 @@
             <div class="image-box">
                 <img src="../img/migform3.png" alt="Image 3">
                 <div class="overlay">
-                    <h2>Гражданство</h2>
+                    <h2 style="margin-top: -105px;">Гражданство</h2>
                     <p>Получение Гражданства Евросоюза,<br>Сербии, Турции, Казахстана<br>под ключ</p>
                     <button class="mig-button">Заказать услугу</button>
                 </div>
