--- a/public/styles/viza.css
+++ b/public/styles/viza.css
@@ -230,7 +230,7 @@ body {
     transform: translateX(-50%);
     width: 75%;
     background-color: #ff581d;
-    color: #fff;
+    color: white;
     padding: 17px;
     border: none;
     border-radius: 10px;
