--- a/public/styles/migration.css
+++ b/public/styles/migration.css
@@ -78,6 +78,7 @@ body {
 }
 
 .mig-button {
+    font-family: "Montserrat", sans-serif;
     background: #ff581d;
     color: white;
     border: none;
@@ -149,7 +150,8 @@ li::before {
 }
 
 .document-button {
-    width: 60%; /* Растягиваем по ширине блока */
+    font-family: "Montserrat", sans-serif;
+    width: 65%; /* Растягиваем по ширине блока */
     padding: 12px;
     margin-top: 15px;
     border: 2px solid white; /* Белая обводка */
@@ -157,7 +159,7 @@ li::before {
     color: white;
     font-size: 18px;
     cursor: pointer;
-    font-weight: 400;
+    font-weight: 500;
     border-radius: 5px;
     transition: all 0.3s ease-in-out;
     display: flex;
@@ -208,10 +210,10 @@ li::before {
 }
 
 .load-documents {
+    font-family: "Montserrat", sans-serif;
     margin-top: 30px; /* Отступ сверху */
     width: 300px; /* Задаем ширину кнопки */
     padding: 12px;
-
     background: #ff581d;
     color: white;
     font-size: 22px;
