--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -18,6 +18,100 @@ body {
     text-align: center;
 }
 
+/* Стили кнопки */
+.menu-button {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background: #333;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    font-size: 24px;
+    cursor: pointer;
+    border-radius: 5px;
+    z-index: 3; /* Поверх всего */
+}
+
+/* Боковое меню (поверх страницы) */
+.sidebar {
+    position: fixed;
+    top: 0;
+    right: -250px; /* Скрыто за экраном */
+    width: 250px;
+    height: 100%;
+    background: rgba(23, 23, 23, 0.9); /* Полупрозрачный фон */
+    color: white;
+    transition: right 0.3s ease-in-out;
+    padding-top: 60px;
+    box-shadow: -5px 0 10px rgba(0, 0, 0, 0.5); /* Тень */
+    z-index: 4; /* Поверх контента */
+    backdrop-filter: blur(5px); /* Размытие заднего фона */
+}
+
+/* Стили ссылок */
+.sidebar ul {
+    padding: 0;
+    margin: 0;
+}
+
+.sidebar li {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    margin-bottom: 8px;
+    padding-left: 15px;
+    position: relative;
+    text-align: left;
+}
+
+.sidebar li::before {
+
+    position: absolute;
+    left: 0;
+    color: white;
+    font-size: 16px;
+    content: "";
+}
+
+.sidebar a {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    display: block;
+    transition: background 0.3s;
+}
+
+
+.sidebar a:hover {
+    background: none;
+    color: #ff581d;
+}
+
+/* Кнопка закрытия */
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.darkHome {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+    display: none;
+    transition: opacity 0.3s ease-in-out;
+}
+
 /* Главный контейнер, который выравнивает всё в ряд */
 .info-home {
     display: flex;
