--- a/public/templates/home.ejs
+++ b/public/templates/home.ejs
@@ -13,6 +13,24 @@
 
 </head>
 <body>
+<!-- Кнопка открытия меню -->
+<button id="menuBtn" class="menu-button">☰</button>
+<div id="darkHome" class="darkHome"></div>
+
+<!-- Боковое меню -->
+<nav id="sidebar" class="sidebar">
+    <button id="closeBtn" class="close-button">✖</button>
+    <ul>
+        <li><a href="/">Главная</a></li>
+        <li><a href="/migration">Визы в Китай</a></li>
+        <li><a href="/services">Миграционные услуги</a></li>
+        <li><a href="/contact">Логистика</a></li>
+        <li><a href="/contact">Контакты</a></li>
+    </ul>
+</nav>
+
+<script src="../javascript/script.js"></script>
+
 <div class="General-center">
     <!-- Галерея с 6 фотографиями -->
     <div class="photo-gallery">
