--- a/public/templates/home.ejs
+++ b/public/templates/home.ejs
@@ -135,19 +135,19 @@
         </div>
     </div>
 </div>
-    <div id="viza-section" style="display: none;">
+    <div id="viza-section">
         <%- include('viza') %>
     </div>
 
-    <div id="migration-section" style="display: none;">
+    <div id="migration-section">
         <%- include('migration') %>
     </div>
 
-    <div id="logistics-section" style="display: none;">
+    <div id="logistics-section">
         <%- include('logistics') %>
     </div>
 
-    <div id="contact-section" style="display: none;">
+    <div id="contact-section" >
         <%- include('footer') %>
     </div>
 </div>
