list-tourist-visa and list-business-visa done

--- a/public/templates/list-business-visa.ejs
+++ b/public/templates/list-business-visa.ejs
@@ -10,11 +10,10 @@
     <link rel="stylesheet" href="../styles/migration.css">
     <link rel="stylesheet" href="../styles/viza.css">
     <link rel="stylesheet" href="../styles/list-business-visa.css">
+    <link rel="stylesheet" href="../styles/list-tourist-visa.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/css/intlTelInput.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/intlTelInput.min.js"></script>
 </head>
 <body>
 <div class="General center">
@@ -172,7 +171,7 @@
     </div>
     <div class="footer-buttons">
         <div class="footer-button-send">
-            <button class="send-button">Отправить</button>
+            <button class="send-button">ОТПРАВИТЬ</button>
         </div>
         <div class="footer-button-return">
             <button class="return-button">Вернуться на главную</button>
