--- a/public/styles/list-business-visa.css
+++ b/public/styles/list-business-visa.css
@@ -153,7 +153,7 @@ h1 span {
     color: #ff581d;
     font-size: 22px;
     text-align: left;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .work-input {
@@ -433,9 +433,9 @@ h1 span {
 
 .footer-area {
     display: flex;
-    align-items: center;
-    gap: 10px;
+    align-items: flex-start;
     margin-top: 30px;
+    gap: 10px;
 }
 
 .footer-text {
@@ -443,6 +443,8 @@ h1 span {
     font-weight: 400;
     color: rgb(229,229,229);
     font-size: 16px;
+    cursor: pointer;
+    text-align: left;
 }
 
 .custom-checkbox {
@@ -477,19 +479,25 @@ h1 span {
 
 .send-button {
     font-family: "Montserrat", sans-serif;
-    width: 300px;
+    font-weight: 600;
+    width: 280px;
     padding: 12px;
-    background: #ff581d;
-    color: white;
-    font-size: 22px;
+    background-color: #ff581d;
+    color: #e5e5e5;
+    font-size: 18px;
     cursor: pointer;
     border-radius: 9px;
-    font-weight: bold;
-    display: block; /* Чтобы кнопка не растягивалась */
+    border-color: #ff581d;
+    border-width: 2px;
+    background-position: center center;
     text-align: center;
     position: relative; /* Позволяет центрировать */
-    transition: all 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
     line-height: 1.55;
+}
+
+.send-button:hover {
+    background-color: #050505;
 }
 
 .return-button{
@@ -504,7 +512,11 @@ h1 span {
     border-width: 2px;
     font-size: 18px;
     cursor: pointer;
-    transition: 0.3s ease;
+    transition: 0.2s ease-in-out;
+}
+
+.return-button:hover {
+    background-color: #ff581d;
 }
 
 .footer-buttons {
