--- a/public/templates/list-tourist-visa.ejs
+++ b/public/templates/list-tourist-visa.ejs
@@ -148,7 +148,7 @@
     <div class="footer-area">
         <input type="checkbox" id="consent-checkbox" class="custom-checkbox">
         <label for="consent-checkbox" class="footer-text">
-            Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь с политикой конфиденциальности
+            Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь с <span><u>политикой конфиденциальности</u></span>
         </label>
     </div>
     <div class="footer-buttons">
