--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -506,3 +506,89 @@ footer {
     width: 100%;
 }
 
+
+/* Фон для всего окна */
+.popup {
+    display: none; /* Изначально скрыто */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Затемнение фона */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Обеспечиваем, чтобы форма была поверх всего */
+}
+
+/* Контент формы */
+.popup-content {
+    background: #D3D3D3; /* Серый фон */
+    padding: 20px;
+    border-radius: 10px;
+    width: 320px;
+    text-align: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    max-height: 80%; /* Максимальная высота формы */
+    overflow-y: auto; /* Прокрутка внутри формы, если нужно */
+    margin: 0 auto; /* Центрируем по горизонтали */
+    transform: translateY(0); /* Убираем смещение */
+}
+
+/* Кнопка закрытия */
+.close {
+    position: absolute;
+    top: 100px;
+    right: 100px;
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+/* Поля формы */
+label {
+    text-align: left;
+    display: block;
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+/* Кнопка отправки */
+.button-nameAndTel {
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.button-nameAndTel:hover {
+    background-color: #0056b3;
+}
+
+/* Текст про согласие */
+.consent-text {
+    font-size: 12px;
+    color: gray;
+    margin-top: 10px;
+}
+
+/* Блокировка прокрутки страницы */
+body.locked {
+    overflow: hidden;
+}
