--- a/public/templates/home.ejs
+++ b/public/templates/home.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/migration.css">
     <link rel="stylesheet" href="../styles/logistics.css">
     <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/popup.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -70,24 +71,7 @@
                 <button id="openPopup" class="visa-urgentle-button">Срочное оформление</button>
             </div>
         </div>
-        <!-- Форма для заполнения -->
-        <div id="popup" class="popup">
-            <span id="closePopup" class="close">&times;</span>
-            <div class="popup-content">
-                <h2>Заказать визу</h2>
-                <form id="visaForm">
-                    <label for="name">Имя Фамилия</label>
-                    <input type="text" id="name" name="name" placeholder="Введите имя и фамилию" required>
 
-                    <label for="phone">Номер телефона</label>
-                    <input type="tel" id="phone" name="phone" placeholder="Введите номер телефона" required>
-
-                    <button class="button-nameAndTel" type="submit">Отправить</button>
-
-                    <p class="consent-text">*Нажимая на кнопку, вы даете свое согласие на обработку персональных данных</p>
-                </form>
-            </div>
-        </div>
 
         <div class="photo-row">
             <div class="photo-container">
@@ -172,5 +156,8 @@
         <%- include('footer') %>
     </div>
 </div>
+
+    <!-- Подключаем popup.ejs -->
+    <%- include('popup') %>
 </body>
 </html>
