udate files popup.ejs and popup.css

--- a/public/styles/popup.css
+++ b/public/styles/popup.css
@@ -14,18 +14,22 @@
 
 /* Контент формы */
 .popup-content {
-    background: #D3D3D3; /* Серый фон */
+    background: #333; /* Серый фон */
     padding: 20px;
-    border-radius: 10px;
-    width: 320px;
+    width: 500px;
+    height: 470px; /* Фиксированная высота */
     text-align: center;
     position: relative;
     display: flex;
     flex-direction: column;
-    max-height: 80%; /* Максимальная высота формы */
     overflow-y: auto; /* Прокрутка внутри формы, если нужно */
     margin: 0 auto; /* Центрируем по горизонтали */
     transform: translateY(0); /* Убираем смещение */
+}
+
+.popup-h2 {
+
+    color: #ff581d;
 }
 
 /* Кнопка закрытия */
@@ -44,32 +48,34 @@
 label {
     text-align: left;
     display: block;
-    font-size: 14px;
-    margin-bottom: 5px;
+    font-size: 20px;
+    margin-bottom: 10px;
 }
 
 input {
     width: 100%;
-    padding: 10px;
+    padding: 15px;
     margin-bottom: 15px;
-    border: 1px solid #ccc;
+    border: 2px solid #ff581d;
     border-radius: 5px;
 }
 
 /* Кнопка отправки */
 .button-nameAndTel {
     width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
+    padding: 13px;
+    background-color: #f5f6fa;
+    color: #ff581d;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 20px;
+    margin-top: 15px;
 }
 
 .button-nameAndTel:hover {
-    background-color: #0056b3;
+    color: #f5f6fa;
+    background-color: #ff581d;
 }
 
 /* Текст про согласие */
