--- a/public/templates/popup.ejs
+++ b/public/templates/popup.ejs
@@ -2,13 +2,13 @@
 <div id="popup" class="popup">
     <span id="closePopup" class="close">&times;</span>
     <div class="popup-content">
-        <h2>Заказать визу</h2>
+        <h2 class="popup-h2">Заказать визу</h2>
         <form id="visaForm">
             <label for="name">Имя Фамилия</label>
-            <input type="text" id="name" name="name" placeholder="Введите имя и фамилию" required>
+            <input type="text" id="name" name="name" placeholder="Иван Иванов" required>
 
             <label for="phone">Номер телефона</label>
-            <input type="tel" id="phone" name="phone" placeholder="Введите номер телефона" required>
+            <input type="tel" id="phone" name="phone" placeholder="+7(921)-999-99-99" required>
 
             <button class="button-nameAndTel" type="submit">Отправить</button>
 
