--- a/public/templates/popup.ejs
+++ b/public/templates/popup.ejs
@@ -13,6 +13,9 @@
             <button class="button-nameAndTel" type="submit">Отправить</button>
 
             <p class="consent-text">*Нажимая на кнопку, вы даете свое согласие на обработку персональных данных</p>
+
+            <!-- Контейнер для сообщений -->
+            <div id="formMessage"></div>
         </form>
     </div>
 </div>
