--- a/public/templates/footer.ejs
+++ b/public/templates/footer.ejs
@@ -13,17 +13,17 @@
 </head>
 <footer>
   <div class="footer-images">
-    <img class="logo" src="img/logo-footer.png" alt="logo-footer">
+    <a href="#home-section" data-section="home"><img class="logo" src="img/logo-footer.png" alt="logo-footer"></a>
     <img class="numbers" src="img/1-2-3.png" alt="1-2-3">
   </div>
   <div class="footer-text-left">
-    <p>Главная</p>
-    <a>Визы в Китай</a>
-    <a>Миграционные услуги</a>
-    <a>Логистика</a>
+    <a href="#home-section" data-section="home" style="color: inherit; font-weight: 600;">Главная</a>
+    <a href="#viza-section" data-section="viza">Визы в Китай</a>
+    <a href="#migration-section" data-section="migration">Миграционные услуги</a>
+    <a href="#logistics-section" data-section="logistics">Логистика</a>
   </div>
   <div class="footer-text-right">
-    <p>Контакты</p>
+    <a style="color: inherit; font-weight: 600;">Контакты</a>
     <a href="tel:79992065007">+7 (999) 206-50-07</a>
     <a href="mailto:podnebesvisacenter@mail.ru">podnebesvisacenter@mail.ru</a>
     <a>Литейный проспект, 39<br>4 этаж/офис 434</a>
